Bug 631189 - 'About Mozilla' link overlaps other page elements at small window sizes. r=mak
UltraBlame original commit: c76345028fa77032832886fca5415d6f3bad5d0a

--- a/browser/base/content/aboutHome.css
+++ b/browser/base/content/aboutHome.css
@@ -634,7 +634,27 @@ max
 -
 height
 :
-450px
+500px
+)
+{
+#
+searchContainer
+{
+height
+:
+25
+%
+}
+}
+media
+all
+and
+(
+max
+-
+height
+:
+370px
 )
 {
 #
@@ -1807,7 +1827,7 @@ max
 -
 height
 :
-370px
+500px
 )
 {
 #
@@ -1820,7 +1840,7 @@ relative
 top
 :
 -
-5px
+15px
 ;
 padding
 -
@@ -2384,4 +2404,24 @@ bottom
 2
 %
 ;
+}
+media
+all
+and
+(
+max
+-
+height
+:
+370px
+)
+{
+#
+bottomSection
+{
+visibility
+:
+hidden
+;
+}
 }
